y.output
Nonterminals useless in grammar

    binary_op


Terminals unused in grammar

    OP


Rules useless in grammar

   76 binary_op: PLUS
   77          | MOINS
   78          | MUL
   79          | DIV
   80          | LSHIFT
   81          | RSHIFT
   82          | BAND
   83          | BOR


State 25 conflicts: 1 shift/reduce
State 45 conflicts: 1 reduce/reduce
State 73 conflicts: 20 reduce/reduce
State 87 conflicts: 1 reduce/reduce
State 131 conflicts: 2 shift/reduce


Grammar

    0 $accept: programme $end

    1 programme: liste_declarations liste_fonctions

    2 liste_declarations: liste_declarations declaration
    3                   | %empty

    4 liste_fonctions: liste_fonctions fonction
    5                | fonction

    6 declaration: type liste_declarateurs ';'

    7 liste_declarateurs: liste_declarateurs ',' declarateur
    8                   | declarateur

    9 declarateur: IDENTIFICATEUR
   10            | declarateur '[' CONSTANTE ']'

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'
   12         | EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'

   13 type: VOID
   14     | INT

   15 create_liste_param: create_liste_param ',' parm
   16                   | parm

   17 liste_parms: liste_parms ',' parm
   18            | create_liste_param
   19            | %empty

   20 parm: INT IDENTIFICATEUR

   21 liste_instructions: liste_instructions instruction
   22                   | %empty

   23 instruction: iteration
   24            | selection
   25            | saut
   26            | affectation ';'
   27            | bloc
   28            | appel

   29 iteration: FOR '(' affectation ';' condition ';' affectation ')' instruction
   30          | WHILE '(' condition ')' instruction

   31 selection: IF '(' condition ')' instruction
   32          | IF '(' condition ')' instruction ELSE instruction
   33          | SWITCH '(' expression ')' instruction
   34          | CASE CONSTANTE ':' instruction
   35          | CASE CONSTANTE ':' instruction saut
   36          | DEFAULT ':' instruction

   37 saut: BREAK ';'
   38     | RETURN ';'
   39     | RETURN expression ';'

   40 affectation: variable '=' expression

   41 bloc: '{' liste_declarations liste_instructions '}'

   42 appel: IDENTIFICATEUR '(' liste_expressions ')' ';'

   43 variable: IDENTIFICATEUR
   44         | tableau

   45 tableau: IDENTIFICATEUR
   46        | tableau '[' expression ']'

   47 expression: '(' expression ')'
   48           | expression PLUS expression
   49           | expression MOINS expression
   50           | expression DIV expression
   51           | expression MUL expression
   52           | expression RSHIFT expression
   53           | expression LSHIFT expression
   54           | expression BAND expression
   55           | expression BOR expression
   56           | MOINS expression
   57           | CONSTANTE
   58           | variable
   59           | IDENTIFICATEUR '(' liste_expressions ')'

   60 liste_expressions: create_expr_liste
   61                  | %empty

   62 create_expr_liste: create_expr_liste ',' expression
   63                  | expression

   64 condition: NOT '(' condition ')'
   65          | condition binary_rel condition
   66          | '(' condition ')'
   67          | expression binary_comp expression

   68 binary_rel: LAND
   69           | LOR

   70 binary_comp: LT
   71            | GT
   72            | GEQ
   73            | LEQ
   74            | EQ
   75            | NEQ


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 29 30 31 32 33 42 47 59 64 66
    ')' (41) 11 12 29 30 31 32 33 42 47 59 64 66
    ',' (44) 7 15 17 62
    ':' (58) 34 35 36
    ';' (59) 6 12 26 29 37 38 39 42
    '=' (61) 40
    '[' (91) 10 46
    ']' (93) 10 46
    '{' (123) 11 41
    '}' (125) 11 41
    error (256)
    IDENTIFICATEUR <node> (258) 9 11 12 20 42 43 45 59
    CONSTANTE <node> (259) 10 34 35 57
    PLUS <node> (260) 48
    MOINS <node> (261) 49 56
    MUL <node> (262) 51
    DIV <node> (263) 50
    LSHIFT <node> (264) 53
    RSHIFT <node> (265) 52
    BAND <node> (266) 54
    BOR <node> (267) 55
    GEQ <node> (268) 72
    LEQ <node> (269) 73
    EQ <node> (270) 74
    NEQ <node> (271) 75
    NOT <node> (272) 64
    LAND <node> (273) 68
    LOR <node> (274) 69
    LT <node> (275) 70
    GT <node> (276) 71
    FOR (277) 29
    WHILE (278) 30
    IF (279) 31 32
    ELSE (280) 32
    SWITCH (281) 33
    CASE (282) 34 35
    DEFAULT (283) 36
    INT (284) 14 20
    VOID (285) 13
    BREAK (286) 37
    RETURN (287) 38 39
    EXTERN (288) 12
    THEN (289)
    OP (290)
    REL (291)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programme <node> (48)
        on left: 1
        on right: 0
    liste_declarations <node> (49)
        on left: 2 3
        on right: 1 2 11 41
    liste_fonctions <node> (50)
        on left: 4 5
        on right: 1 4
    declaration <node> (51)
        on left: 6
        on right: 2
    liste_declarateurs <node> (52)
        on left: 7 8
        on right: 6 7
    declarateur <node> (53)
        on left: 9 10
        on right: 7 8 10
    fonction <node> (54)
        on left: 11 12
        on right: 4 5
    type <node> (55)
        on left: 13 14
        on right: 6 11 12
    create_liste_param <node> (56)
        on left: 15 16
        on right: 15 18
    liste_parms <node> (57)
        on left: 17 18 19
        on right: 11 12 17
    parm <node> (58)
        on left: 20
        on right: 15 16 17
    liste_instructions <node> (59)
        on left: 21 22
        on right: 11 21 41
    instruction <node> (60)
        on left: 23 24 25 26 27 28
        on right: 21 29 30 31 32 33 34 35 36
    iteration <node> (61)
        on left: 29 30
        on right: 23
    selection <node> (62)
        on left: 31 32 33 34 35 36
        on right: 24
    saut <node> (63)
        on left: 37 38 39
        on right: 25 35
    affectation <node> (64)
        on left: 40
        on right: 26 29
    bloc <node> (65)
        on left: 41
        on right: 27
    appel <node> (66)
        on left: 42
        on right: 28
    variable <node> (67)
        on left: 43 44
        on right: 40 58
    tableau <node> (68)
        on left: 45 46
        on right: 44 46
    expression <node> (69)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 33 39 40 46 47 48 49 50 51 52 53 54 55 56 62 63 67
    liste_expressions <node> (70)
        on left: 60 61
        on right: 42 59
    create_expr_liste <node> (71)
        on left: 62 63
        on right: 60 62
    condition <node> (72)
        on left: 64 65 66 67
        on right: 29 30 31 32 64 65 66
    binary_rel <node> (73)
        on left: 68 69
        on right: 65
    binary_comp <node> (74)
        on left: 70 71 72 73 74 75
        on right: 67


State 0

    0 $accept: . programme $end

    $default  reduce using rule 3 (liste_declarations)

    programme           go to state 1
    liste_declarations  go to state 2


State 1

    0 $accept: programme . $end

    $end  shift, and go to state 3


State 2

    1 programme: liste_declarations . liste_fonctions
    2 liste_declarations: liste_declarations . declaration

    INT     shift, and go to state 4
    VOID    shift, and go to state 5
    EXTERN  shift, and go to state 6

    liste_fonctions  go to state 7
    declaration      go to state 8
    fonction         go to state 9
    type             go to state 10


State 3

    0 $accept: programme $end .

    $default  accept


State 4

   14 type: INT .

    $default  reduce using rule 14 (type)


State 5

   13 type: VOID .

    $default  reduce using rule 13 (type)


State 6

   12 fonction: EXTERN . type IDENTIFICATEUR '(' liste_parms ')' ';'

    INT   shift, and go to state 4
    VOID  shift, and go to state 5

    type  go to state 11


State 7

    1 programme: liste_declarations liste_fonctions .
    4 liste_fonctions: liste_fonctions . fonction

    INT     shift, and go to state 4
    VOID    shift, and go to state 5
    EXTERN  shift, and go to state 6

    $default  reduce using rule 1 (programme)

    fonction  go to state 12
    type      go to state 13


State 8

    2 liste_declarations: liste_declarations declaration .

    $default  reduce using rule 2 (liste_declarations)


State 9

    5 liste_fonctions: fonction .

    $default  reduce using rule 5 (liste_fonctions)


State 10

    6 declaration: type . liste_declarateurs ';'
   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 14

    liste_declarateurs  go to state 15
    declarateur         go to state 16


State 11

   12 fonction: EXTERN type . IDENTIFICATEUR '(' liste_parms ')' ';'

    IDENTIFICATEUR  shift, and go to state 17


State 12

    4 liste_fonctions: liste_fonctions fonction .

    $default  reduce using rule 4 (liste_fonctions)


State 13

   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 18


State 14

    9 declarateur: IDENTIFICATEUR .
   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 19

    $default  reduce using rule 9 (declarateur)


State 15

    6 declaration: type liste_declarateurs . ';'
    7 liste_declarateurs: liste_declarateurs . ',' declarateur

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


State 16

    8 liste_declarateurs: declarateur .
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 22

    $default  reduce using rule 8 (liste_declarateurs)


State 17

   12 fonction: EXTERN type IDENTIFICATEUR . '(' liste_parms ')' ';'

    '('  shift, and go to state 23


State 18

   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 19


State 19

   11 fonction: type IDENTIFICATEUR '(' . liste_parms ')' '{' liste_declarations liste_instructions '}'

    INT  shift, and go to state 24

    $default  reduce using rule 19 (liste_parms)

    create_liste_param  go to state 25
    liste_parms         go to state 26
    parm                go to state 27


State 20

    6 declaration: type liste_declarateurs ';' .

    $default  reduce using rule 6 (declaration)


State 21

    7 liste_declarateurs: liste_declarateurs ',' . declarateur

    IDENTIFICATEUR  shift, and go to state 28

    declarateur  go to state 29


State 22

   10 declarateur: declarateur '[' . CONSTANTE ']'

    CONSTANTE  shift, and go to state 30


State 23

   12 fonction: EXTERN type IDENTIFICATEUR '(' . liste_parms ')' ';'

    INT  shift, and go to state 24

    $default  reduce using rule 19 (liste_parms)

    create_liste_param  go to state 25
    liste_parms         go to state 31
    parm                go to state 27


State 24

   20 parm: INT . IDENTIFICATEUR

    IDENTIFICATEUR  shift, and go to state 32


State 25

   15 create_liste_param: create_liste_param . ',' parm
   18 liste_parms: create_liste_param .

    ','  shift, and go to state 33

    ','       [reduce using rule 18 (liste_parms)]
    $default  reduce using rule 18 (liste_parms)


State 26

   11 fonction: type IDENTIFICATEUR '(' liste_parms . ')' '{' liste_declarations liste_instructions '}'
   17 liste_parms: liste_parms . ',' parm

    ','  shift, and go to state 34
    ')'  shift, and go to state 35


State 27

   16 create_liste_param: parm .

    $default  reduce using rule 16 (create_liste_param)


State 28

    9 declarateur: IDENTIFICATEUR .

    $default  reduce using rule 9 (declarateur)


State 29

    7 liste_declarateurs: liste_declarateurs ',' declarateur .
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 22

    $default  reduce using rule 7 (liste_declarateurs)


State 30

   10 declarateur: declarateur '[' CONSTANTE . ']'

    ']'  shift, and go to state 36


State 31

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms . ')' ';'
   17 liste_parms: liste_parms . ',' parm

    ','  shift, and go to state 34
    ')'  shift, and go to state 37


State 32

   20 parm: INT IDENTIFICATEUR .

    $default  reduce using rule 20 (parm)


State 33

   15 create_liste_param: create_liste_param ',' . parm

    INT  shift, and go to state 24

    parm  go to state 38


State 34

   17 liste_parms: liste_parms ',' . parm

    INT  shift, and go to state 24

    parm  go to state 39


State 35

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' . '{' liste_declarations liste_instructions '}'

    '{'  shift, and go to state 40


State 36

   10 declarateur: declarateur '[' CONSTANTE ']' .

    $default  reduce using rule 10 (declarateur)


State 37

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' . ';'

    ';'  shift, and go to state 41


State 38

   15 create_liste_param: create_liste_param ',' parm .

    $default  reduce using rule 15 (create_liste_param)


State 39

   17 liste_parms: liste_parms ',' parm .

    $default  reduce using rule 17 (liste_parms)


State 40

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 42


State 41

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';' .

    $default  reduce using rule 12 (fonction)


State 42

    2 liste_declarations: liste_declarations . declaration
   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations . liste_instructions '}'

    INT   shift, and go to state 4
    VOID  shift, and go to state 5

    $default  reduce using rule 22 (liste_instructions)

    declaration         go to state 8
    type                go to state 43
    liste_instructions  go to state 44


State 43

    6 declaration: type . liste_declarateurs ';'

    IDENTIFICATEUR  shift, and go to state 28

    liste_declarateurs  go to state 15
    declarateur         go to state 16


State 44

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions . '}'
   21 liste_instructions: liste_instructions . instruction

    IDENTIFICATEUR  shift, and go to state 45
    FOR             shift, and go to state 46
    WHILE           shift, and go to state 47
    IF              shift, and go to state 48
    SWITCH          shift, and go to state 49
    CASE            shift, and go to state 50
    DEFAULT         shift, and go to state 51
    BREAK           shift, and go to state 52
    RETURN          shift, and go to state 53
    '{'             shift, and go to state 54
    '}'             shift, and go to state 55

    instruction  go to state 56
    iteration    go to state 57
    selection    go to state 58
    saut         go to state 59
    affectation  go to state 60
    bloc         go to state 61
    appel        go to state 62
    variable     go to state 63
    tableau      go to state 64


State 45

   42 appel: IDENTIFICATEUR . '(' liste_expressions ')' ';'
   43 variable: IDENTIFICATEUR .
   45 tableau: IDENTIFICATEUR .

    '('  shift, and go to state 65

    '['       reduce using rule 45 (tableau)
    '='       reduce using rule 43 (variable)
    '='       [reduce using rule 45 (tableau)]
    $default  reduce using rule 43 (variable)


State 46

   29 iteration: FOR . '(' affectation ';' condition ';' affectation ')' instruction

    '('  shift, and go to state 66


State 47

   30 iteration: WHILE . '(' condition ')' instruction

    '('  shift, and go to state 67


State 48

   31 selection: IF . '(' condition ')' instruction
   32          | IF . '(' condition ')' instruction ELSE instruction

    '('  shift, and go to state 68


State 49

   33 selection: SWITCH . '(' expression ')' instruction

    '('  shift, and go to state 69


State 50

   34 selection: CASE . CONSTANTE ':' instruction
   35          | CASE . CONSTANTE ':' instruction saut

    CONSTANTE  shift, and go to state 70


State 51

   36 selection: DEFAULT . ':' instruction

    ':'  shift, and go to state 71


State 52

   37 saut: BREAK . ';'

    ';'  shift, and go to state 72


State 53

   38 saut: RETURN . ';'
   39     | RETURN . expression ';'

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    ';'             shift, and go to state 76
    '('             shift, and go to state 77

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 79


State 54

   41 bloc: '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 80


State 55

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}' .

    $default  reduce using rule 11 (fonction)


State 56

   21 liste_instructions: liste_instructions instruction .

    $default  reduce using rule 21 (liste_instructions)


State 57

   23 instruction: iteration .

    $default  reduce using rule 23 (instruction)


State 58

   24 instruction: selection .

    $default  reduce using rule 24 (instruction)


State 59

   25 instruction: saut .

    $default  reduce using rule 25 (instruction)


State 60

   26 instruction: affectation . ';'

    ';'  shift, and go to state 81


State 61

   27 instruction: bloc .

    $default  reduce using rule 27 (instruction)


State 62

   28 instruction: appel .

    $default  reduce using rule 28 (instruction)


State 63

   40 affectation: variable . '=' expression

    '='  shift, and go to state 82


State 64

   44 variable: tableau .
   46 tableau: tableau . '[' expression ']'

    '['  shift, and go to state 83

    $default  reduce using rule 44 (variable)


State 65

   42 appel: IDENTIFICATEUR '(' . liste_expressions ')' ';'

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    '('             shift, and go to state 77

    $default  reduce using rule 61 (liste_expressions)

    variable           go to state 78
    tableau            go to state 64
    expression         go to state 84
    liste_expressions  go to state 85
    create_expr_liste  go to state 86


State 66

   29 iteration: FOR '(' . affectation ';' condition ';' affectation ')' instruction

    IDENTIFICATEUR  shift, and go to state 87

    affectation  go to state 88
    variable     go to state 63
    tableau      go to state 64


State 67

   30 iteration: WHILE '(' . condition ')' instruction

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    NOT             shift, and go to state 89
    '('             shift, and go to state 90

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 91
    condition   go to state 92


State 68

   31 selection: IF '(' . condition ')' instruction
   32          | IF '(' . condition ')' instruction ELSE instruction

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    NOT             shift, and go to state 89
    '('             shift, and go to state 90

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 91
    condition   go to state 93


State 69

   33 selection: SWITCH '(' . expression ')' instruction

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    '('             shift, and go to state 77

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 94


State 70

   34 selection: CASE CONSTANTE . ':' instruction
   35          | CASE CONSTANTE . ':' instruction saut

    ':'  shift, and go to state 95


State 71

   36 selection: DEFAULT ':' . instruction

    IDENTIFICATEUR  shift, and go to state 45
    FOR             shift, and go to state 46
    WHILE           shift, and go to state 47
    IF              shift, and go to state 48
    SWITCH          shift, and go to state 49
    CASE            shift, and go to state 50
    DEFAULT         shift, and go to state 51
    BREAK           shift, and go to state 52
    RETURN          shift, and go to state 53
    '{'             shift, and go to state 54

    instruction  go to state 96
    iteration    go to state 57
    selection    go to state 58
    saut         go to state 59
    affectation  go to state 60
    bloc         go to state 61
    appel        go to state 62
    variable     go to state 63
    tableau      go to state 64


State 72

   37 saut: BREAK ';' .

    $default  reduce using rule 37 (saut)


State 73

   43 variable: IDENTIFICATEUR .
   45 tableau: IDENTIFICATEUR .
   59 expression: IDENTIFICATEUR . '(' liste_expressions ')'

    '('  shift, and go to state 97

    PLUS      reduce using rule 43 (variable)
    PLUS      [reduce using rule 45 (tableau)]
    MOINS     reduce using rule 43 (variable)
    MOINS     [reduce using rule 45 (tableau)]
    MUL       reduce using rule 43 (variable)
    MUL       [reduce using rule 45 (tableau)]
    DIV       reduce using rule 43 (variable)
    DIV       [reduce using rule 45 (tableau)]
    LSHIFT    reduce using rule 43 (variable)
    LSHIFT    [reduce using rule 45 (tableau)]
    RSHIFT    reduce using rule 43 (variable)
    RSHIFT    [reduce using rule 45 (tableau)]
    BAND      reduce using rule 43 (variable)
    BAND      [reduce using rule 45 (tableau)]
    BOR       reduce using rule 43 (variable)
    BOR       [reduce using rule 45 (tableau)]
    GEQ       reduce using rule 43 (variable)
    GEQ       [reduce using rule 45 (tableau)]
    LEQ       reduce using rule 43 (variable)
    LEQ       [reduce using rule 45 (tableau)]
    EQ        reduce using rule 43 (variable)
    EQ        [reduce using rule 45 (tableau)]
    NEQ       reduce using rule 43 (variable)
    NEQ       [reduce using rule 45 (tableau)]
    LAND      reduce using rule 43 (variable)
    LAND      [reduce using rule 45 (tableau)]
    LOR       reduce using rule 43 (variable)
    LOR       [reduce using rule 45 (tableau)]
    LT        reduce using rule 43 (variable)
    LT        [reduce using rule 45 (tableau)]
    GT        reduce using rule 43 (variable)
    GT        [reduce using rule 45 (tableau)]
    ';'       reduce using rule 43 (variable)
    ';'       [reduce using rule 45 (tableau)]
    ','       reduce using rule 43 (variable)
    ','       [reduce using rule 45 (tableau)]
    '['       reduce using rule 45 (tableau)
    ']'       reduce using rule 43 (variable)
    ']'       [reduce using rule 45 (tableau)]
    ')'       reduce using rule 43 (variable)
    ')'       [reduce using rule 45 (tableau)]
    $default  reduce using rule 43 (variable)


State 74

   57 expression: CONSTANTE .

    $default  reduce using rule 57 (expression)


State 75

   56 expression: MOINS . expression

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    '('             shift, and go to state 77

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 98


State 76

   38 saut: RETURN ';' .

    $default  reduce using rule 38 (saut)


State 77

   47 expression: '(' . expression ')'

    IDENTIFICATEUR  shift, and go to state 73
    CONSTANTE       shift, and go to state 74
    MOINS           shift, and go to state 75
    '('             shift, and go to state 77

    variable    go to state 78
    tableau     go to state 64
    expression  go to state 99


State 78
